--- a/movie_recommender_system.ipynb
+++ b/movie_recommender_system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpQbIniKDBIqKfK9h5o7Z3",
+      "authorship_tag": "ABX9TyOM+UOAJqzSb4uV4QM+UCI9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "id": "cQWNhcJ_i7fk"
       },
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "v7UbteCejRUE"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -61,9 +61,9 @@
           "height": 729
         },
         "id": "qh_MS65Cjdri",
-        "outputId": "ec82dc3c-744a-4221-c7f0-7628c94f85e2"
+        "outputId": "6332ebda-0572-4daf-8675-3a4eecb11e7f"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-46cb2993-80a3-44f4-807e-091f60f8e6f9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2f51a8a8-6804-45da-898c-f23fb4347517\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -304,7 +304,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-46cb2993-80a3-44f4-807e-091f60f8e6f9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f51a8a8-6804-45da-898c-f23fb4347517')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -356,12 +356,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-46cb2993-80a3-44f4-807e-091f60f8e6f9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2f51a8a8-6804-45da-898c-f23fb4347517 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-46cb2993-80a3-44f4-807e-091f60f8e6f9');\n",
+              "        const element = document.querySelector('#df-2f51a8a8-6804-45da-898c-f23fb4347517');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -381,8 +381,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d1ed2924-4093-4960-a8ba-0e1acf1d2db3\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d1ed2924-4093-4960-a8ba-0e1acf1d2db3')\"\n",
+              "    <div id=\"df-0f209e1c-6707-4a58-ad47-21d84c18d1d3\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0f209e1c-6707-4a58-ad47-21d84c18d1d3')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -501,7 +501,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d1ed2924-4093-4960-a8ba-0e1acf1d2db3 button');\n",
+              "            document.querySelector('#df-0f209e1c-6707-4a58-ad47-21d84c18d1d3 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -518,7 +518,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 9
         }
       ]
     },
@@ -534,9 +534,9 @@
         },
         "collapsed": true,
         "id": "pgitvJfImrja",
-        "outputId": "18841666-c966-492b-d3bf-99d13d5c79c7"
+        "outputId": "137af528-39f1-4303-e98c-4bd8492c7474"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +598,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 10
         }
       ]
     },
@@ -610,7 +610,7 @@
       "metadata": {
         "id": "9yAQht8hocfL"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -621,7 +621,7 @@
       "metadata": {
         "id": "0scYwYrf3SWZ"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -635,9 +635,9 @@
           "height": 303
         },
         "id": "WvNAUZ5_4AcH",
-        "outputId": "e90b3d97-9597-4772-afd5-171221edc1fc"
+        "outputId": "b38c85d0-23c2-48c6-8002-1a25aac00b2b"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +709,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 13
         }
       ]
     },
@@ -721,7 +721,7 @@
       "metadata": {
         "id": "p1_frfzx5aRI"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -734,9 +734,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6E2fV1hI5l1E",
-        "outputId": "e56cb002-81c5-4ec1-d9c2-14fbad1220fd"
+        "outputId": "3a233188-f14b-4a7f-f33a-05d943567d97"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -746,7 +746,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 15
         }
       ]
     },
@@ -762,7 +762,7 @@
       "metadata": {
         "id": "Umdtt6sE6uwY"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -777,9 +777,9 @@
           "height": 186
         },
         "id": "gVeUOpYf7l-z",
-        "outputId": "d3e28b68-d4c5-4900-9ffc-14e1029d7c4b"
+        "outputId": "d1b43993-d000-4aa9-ee66-3d261bdb0556"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -831,7 +831,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 17
         }
       ]
     },
@@ -843,7 +843,7 @@
       "metadata": {
         "id": "rxmdiLcS7FPo"
       },
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -854,7 +854,7 @@
       "metadata": {
         "id": "X1v9K7qx9UQs"
       },
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -874,7 +874,7 @@
       "metadata": {
         "id": "Ss2U6uZ19QwY"
       },
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -885,7 +885,7 @@
       "metadata": {
         "id": "zoNW4qMLCO4s"
       },
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -902,7 +902,7 @@
       "metadata": {
         "id": "p_0T8iJYCi9e"
       },
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -912,13 +912,13 @@
       ],
       "metadata": {
         "id": "x6aCN_QGDFnB",
-        "outputId": "b9257dac-e795-496d-ff00-f577ee3a3f5a",
+        "outputId": "73df9213-c53e-46b7-fc72-ca316af6eb41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +1011,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 23
         }
       ]
     },
@@ -1023,7 +1023,7 @@
       "metadata": {
         "id": "Xlt_N8bfDoFo"
       },
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1037,7 +1037,7 @@
       "metadata": {
         "id": "1ByXVpnuDgFS"
       },
-      "execution_count": 21,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1048,7 +1048,7 @@
       "metadata": {
         "id": "wM15CAxorgoH"
       },
-      "execution_count": 22,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1059,7 +1059,7 @@
       "metadata": {
         "id": "jbSiNnXxrt7g"
       },
-      "execution_count": 23,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1069,12 +1069,12 @@
       ],
       "metadata": {
         "id": "UdKtxKRTr2Pt",
-        "outputId": "0b563af0-8cf9-40e9-f201-5e46021d812f",
+        "outputId": "c1f5f7e9-f617-40e3-cfc5-dab66b024ead",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,12 +1097,12 @@
       ],
       "metadata": {
         "id": "SbEVYmQjsdws",
-        "outputId": "a1d7560b-6798-4616-b999-3eb3a17c134d",
+        "outputId": "5a6e8d44-9b4d-450f-91b5-691ddb852fcf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,9 +1132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lVifUeuCyIvN",
-        "outputId": "845fe031-6645-43d9-a653-6835cb2ba3b7"
+        "outputId": "83b6f02c-decf-4e1e-b604-22abc3982cd7"
       },
-      "execution_count": 26,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,7 +1165,7 @@
       "metadata": {
         "id": "KW-NnwA3ycLp"
       },
-      "execution_count": 27,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1175,12 +1175,12 @@
       ],
       "metadata": {
         "id": "i3npwKLN4-4J",
-        "outputId": "627e7f2d-cd4d-4427-94ad-fb6fbfe47b3f",
+        "outputId": "e319d0ba-8537-4cf2-8f43-ef02bc40dcff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,7 +1203,7 @@
       "metadata": {
         "id": "1Q5TBdvo6r0j"
       },
-      "execution_count": 29,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1215,7 +1215,7 @@
       "metadata": {
         "id": "fwjcUXtrNx8f"
       },
-      "execution_count": 30,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1231,7 +1231,7 @@
       "metadata": {
         "id": "x9lknfpaN7X5"
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1241,13 +1241,13 @@
       ],
       "metadata": {
         "id": "fOVG8hnROPCy",
-        "outputId": "f6e672da-6f84-454b-89e7-a14eab9f23c0",
+        "outputId": "4a123d6d-12af-4979-afaa-99d5d8d4841c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": 34,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1340,7 +1340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 36
         }
       ]
     },
@@ -1352,7 +1352,7 @@
       "metadata": {
         "id": "EddlepHFQSi3"
       },
-      "execution_count": 35,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1363,7 +1363,7 @@
       "metadata": {
         "id": "I-xrfLFqRBaf"
       },
-      "execution_count": 37,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1373,12 +1373,12 @@
       ],
       "metadata": {
         "id": "S1ZhblkIYxTo",
-        "outputId": "1ceff2e7-7eef-4678-a7b8-06cc72311cd3",
+        "outputId": "92b1b38d-6ef5-44ad-b110-0f8f24c6a3bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1392,7 +1392,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 39
         }
       ]
     },
@@ -1410,7 +1410,7 @@
       "metadata": {
         "id": "OVw0q3_cRjin"
       },
-      "execution_count": 41,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1419,10 +1419,130 @@
         "recommend('Avatar')"
       ],
       "metadata": {
-        "id": "jmzSVDdHZpS5"
+        "id": "jmzSVDdHZpS5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4aa91153-0bc5-43e4-f1fa-b5117dda9762"
       },
-      "execution_count": null,
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Independence Day\n",
+            "Titan A.E.\n",
+            "Aliens vs Predator: Requiem\n",
+            "Small Soldiers\n",
+            "Battle: Los Angeles\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle"
+      ],
+      "metadata": {
+        "id": "VlNx_Gjd8Zqt"
+      },
+      "execution_count": 42,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pickle.dump(new_df,open('movies.pkl', 'wb'))\n"
+      ],
+      "metadata": {
+        "id": "a_qZ32tp8hVw"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download(\"movies.pkl\")"
+      ],
+      "metadata": {
+        "id": "ejWSEV0-_bDv",
+        "outputId": "176707b5-7131-41f4-bda3-b68b6a0fcc4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_3b21b860-1cff-4504-8c70-e166a3df12d7\", \"movies.pkl\", 38633952)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
