--- a/movie_recommender_system.ipynb
+++ b/movie_recommender_system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOM+UOAJqzSb4uV4QM+UCI9",
+      "authorship_tag": "ABX9TyMbQoiygoRel2PpR8zFikzs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "cQWNhcJ_i7fk"
       },
@@ -47,7 +47,45 @@
       "metadata": {
         "id": "v7UbteCejRUE"
       },
-      "execution_count": 8,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3eda4def",
+        "outputId": "805878ec-8e5d-48a4-c9a6-474ca4d19dc4"
+      },
+      "source": [
+        "!unzip tmdb_5000_movies.csv.zip\n",
+        "!unzip tmdb_5000_credits.csv.zip"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  tmdb_5000_movies.csv.zip\n",
+            "replace tmdb_5000_movies.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: Archive:  tmdb_5000_credits.csv.zip\n",
+            "replace tmdb_5000_credits.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f9c25556"
+      },
+      "source": [
+        "movies = pd.read_csv('tmdb_5000_movies.csv')\n",
+        "credits = pd.read_csv('tmdb_5000_credits.csv')"
+      ],
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -61,9 +99,9 @@
           "height": 729
         },
         "id": "qh_MS65Cjdri",
-        "outputId": "6332ebda-0572-4daf-8675-3a4eecb11e7f"
+        "outputId": "5ddce015-9478-47b0-be1b-2aa64a00c908"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +179,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2f51a8a8-6804-45da-898c-f23fb4347517\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ebafa9e9-0770-4252-877b-cf14f7913f4e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -304,7 +342,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f51a8a8-6804-45da-898c-f23fb4347517')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ebafa9e9-0770-4252-877b-cf14f7913f4e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -356,12 +394,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2f51a8a8-6804-45da-898c-f23fb4347517 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ebafa9e9-0770-4252-877b-cf14f7913f4e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2f51a8a8-6804-45da-898c-f23fb4347517');\n",
+              "        const element = document.querySelector('#df-ebafa9e9-0770-4252-877b-cf14f7913f4e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -381,8 +419,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-0f209e1c-6707-4a58-ad47-21d84c18d1d3\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0f209e1c-6707-4a58-ad47-21d84c18d1d3')\"\n",
+              "    <div id=\"df-a0cba43c-a469-4d1b-8224-12bbf860a1f5\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a0cba43c-a469-4d1b-8224-12bbf860a1f5')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -501,7 +539,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-0f209e1c-6707-4a58-ad47-21d84c18d1d3 button');\n",
+              "            document.querySelector('#df-a0cba43c-a469-4d1b-8224-12bbf860a1f5 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -518,7 +556,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 12
         }
       ]
     },
@@ -534,9 +572,9 @@
         },
         "collapsed": true,
         "id": "pgitvJfImrja",
-        "outputId": "137af528-39f1-4303-e98c-4bd8492c7474"
+        "outputId": "a2fdd9bf-15c3-4f71-a8c2-1f1db08948dc"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +636,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 13
         }
       ]
     },
@@ -610,7 +648,7 @@
       "metadata": {
         "id": "9yAQht8hocfL"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -621,7 +659,7 @@
       "metadata": {
         "id": "0scYwYrf3SWZ"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -635,9 +673,9 @@
           "height": 303
         },
         "id": "WvNAUZ5_4AcH",
-        "outputId": "b38c85d0-23c2-48c6-8002-1a25aac00b2b"
+        "outputId": "b4cf8621-68a3-4f2e-dff4-13d5404fb92a"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +747,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 16
         }
       ]
     },
@@ -721,7 +759,7 @@
       "metadata": {
         "id": "p1_frfzx5aRI"
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -734,9 +772,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6E2fV1hI5l1E",
-        "outputId": "3a233188-f14b-4a7f-f33a-05d943567d97"
+        "outputId": "95869fa7-a4c1-4adf-fac8-dffeec4ad329"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -746,7 +784,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 18
         }
       ]
     },
@@ -762,7 +800,7 @@
       "metadata": {
         "id": "Umdtt6sE6uwY"
       },
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -777,9 +815,9 @@
           "height": 186
         },
         "id": "gVeUOpYf7l-z",
-        "outputId": "d1b43993-d000-4aa9-ee66-3d261bdb0556"
+        "outputId": "9821dbf0-ba6a-4ef1-93c2-776401f31538"
       },
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -831,7 +869,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 20
         }
       ]
     },
@@ -843,7 +881,7 @@
       "metadata": {
         "id": "rxmdiLcS7FPo"
       },
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -854,7 +892,7 @@
       "metadata": {
         "id": "X1v9K7qx9UQs"
       },
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -874,7 +912,7 @@
       "metadata": {
         "id": "Ss2U6uZ19QwY"
       },
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -885,7 +923,7 @@
       "metadata": {
         "id": "zoNW4qMLCO4s"
       },
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -902,7 +940,7 @@
       "metadata": {
         "id": "p_0T8iJYCi9e"
       },
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -912,13 +950,13 @@
       ],
       "metadata": {
         "id": "x6aCN_QGDFnB",
-        "outputId": "73df9213-c53e-46b7-fc72-ca316af6eb41",
+        "outputId": "0f937912-1d35-4cfc-ebc5-f4cfd902ea72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +1049,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 26
         }
       ]
     },
@@ -1023,7 +1061,7 @@
       "metadata": {
         "id": "Xlt_N8bfDoFo"
       },
-      "execution_count": 24,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1037,7 +1075,7 @@
       "metadata": {
         "id": "1ByXVpnuDgFS"
       },
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1048,7 +1086,7 @@
       "metadata": {
         "id": "wM15CAxorgoH"
       },
-      "execution_count": 26,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1059,7 +1097,7 @@
       "metadata": {
         "id": "jbSiNnXxrt7g"
       },
-      "execution_count": 27,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1069,12 +1107,12 @@
       ],
       "metadata": {
         "id": "UdKtxKRTr2Pt",
-        "outputId": "c1f5f7e9-f617-40e3-cfc5-dab66b024ead",
+        "outputId": "3a665cb7-18be-4ead-e4dc-c6ad0a95b268",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,12 +1135,12 @@
       ],
       "metadata": {
         "id": "SbEVYmQjsdws",
-        "outputId": "5a6e8d44-9b4d-450f-91b5-691ddb852fcf",
+        "outputId": "de7fc850-f51a-43fe-de35-6f5b2b53c1e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,9 +1170,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lVifUeuCyIvN",
-        "outputId": "83b6f02c-decf-4e1e-b604-22abc3982cd7"
+        "outputId": "0d4f9a1d-0d28-4549-ea7f-c896bc28ab8f"
       },
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,7 +1203,7 @@
       "metadata": {
         "id": "KW-NnwA3ycLp"
       },
-      "execution_count": 31,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1175,12 +1213,12 @@
       ],
       "metadata": {
         "id": "i3npwKLN4-4J",
-        "outputId": "e319d0ba-8537-4cf2-8f43-ef02bc40dcff",
+        "outputId": "d5f68b8f-0ba1-44cb-ef05-b7f54f3835a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,7 +1226,7 @@
           "text": [
             "Requirement already satisfied: nltk in /usr/local/lib/python3.12/dist-packages (3.9.1)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from nltk) (8.2.1)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.1)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.2)\n",
             "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.12/dist-packages (from nltk) (2024.11.6)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from nltk) (4.67.1)\n"
           ]
@@ -1203,7 +1241,7 @@
       "metadata": {
         "id": "1Q5TBdvo6r0j"
       },
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1215,7 +1253,7 @@
       "metadata": {
         "id": "fwjcUXtrNx8f"
       },
-      "execution_count": 34,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1231,7 +1269,7 @@
       "metadata": {
         "id": "x9lknfpaN7X5"
       },
-      "execution_count": 35,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1241,13 +1279,13 @@
       ],
       "metadata": {
         "id": "fOVG8hnROPCy",
-        "outputId": "4a123d6d-12af-4979-afaa-99d5d8d4841c",
+        "outputId": "8bb0be7f-e91b-4368-9001-925af42fb156",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": 36,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1340,7 +1378,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 39
         }
       ]
     },
@@ -1352,7 +1390,7 @@
       "metadata": {
         "id": "EddlepHFQSi3"
       },
-      "execution_count": 37,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1363,7 +1401,7 @@
       "metadata": {
         "id": "I-xrfLFqRBaf"
       },
-      "execution_count": 38,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1373,12 +1411,12 @@
       ],
       "metadata": {
         "id": "S1ZhblkIYxTo",
-        "outputId": "92b1b38d-6ef5-44ad-b110-0f8f24c6a3bb",
+        "outputId": "26676b8b-914e-4d33-db57-b54877187e6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1392,7 +1430,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 42
         }
       ]
     },
@@ -1410,7 +1448,7 @@
       "metadata": {
         "id": "OVw0q3_cRjin"
       },
-      "execution_count": 40,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1423,9 +1461,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4aa91153-0bc5-43e4-f1fa-b5117dda9762"
+        "outputId": "d34ac333-718a-4545-bd18-2a3e4c43d993"
       },
-      "execution_count": 41,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -1448,7 +1486,7 @@
       "metadata": {
         "id": "VlNx_Gjd8Zqt"
       },
-      "execution_count": 42,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -1459,7 +1497,7 @@
       "metadata": {
         "id": "a_qZ32tp8hVw"
       },
-      "execution_count": 47,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -1470,13 +1508,13 @@
       ],
       "metadata": {
         "id": "ejWSEV0-_bDv",
-        "outputId": "176707b5-7131-41f4-bda3-b68b6a0fcc4a",
+        "outputId": "651cb680-e1df-4ead-ef25-70108decadf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         }
       },
-      "execution_count": 48,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1537,7 +1575,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_3b21b860-1cff-4504-8c70-e166a3df12d7\", \"movies.pkl\", 38633952)"
+              "download(\"download_87b46853-418d-41e5-b381-16e547891c1a\", \"movies.pkl\", 38633952)"
             ]
           },
           "metadata": {}
